--- a/VehicleTrackingSystem/VehicleTracking.API/VehicleTracking.API.csproj
+++ b/VehicleTrackingSystem/VehicleTracking.API/VehicleTracking.API.csproj
@@ -6,6 +6,7 @@
 
   <ItemGroup>
     <PackageReference Include="MongoDB.Driver" Version="2.13.0" />
+    <PackageReference Include="NLog.Web.AspNetCore" Version="4.13.0" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.1.4" />
   </ItemGroup>
 
