--- a/VehicleTrackingSystem/VehicleTracking.API/VehicleTracking.API.csproj
+++ b/VehicleTrackingSystem/VehicleTracking.API/VehicleTracking.API.csproj
@@ -5,6 +5,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="8.1.1" />
     <PackageReference Include="MongoDB.Driver" Version="2.13.0" />
     <PackageReference Include="NLog.Web.AspNetCore" Version="4.13.0" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.1.4" />
