--- a/VehicleTrackingSystem/VehicleTracking.API/appsettings.json
+++ b/VehicleTrackingSystem/VehicleTracking.API/appsettings.json
@@ -1,6 +1,7 @@
 {
   "MongoDatabaseSettings": {
     "VehicleCollection": "Vehicle",
+    "TrackerCollection" :  "Tracker",
     "ConnectionString": "mongodb+srv://admin:admin@cluster0.kdozv.mongodb.net/admin",
     "DatabaseName": "VehicleTrackingSystem"
   },
