--- a/VehicleTrackingSystem/VehicleTracking.API/appsettings.json
+++ b/VehicleTrackingSystem/VehicleTracking.API/appsettings.json
@@ -1,7 +1,7 @@
 {
   "MongoDatabaseSettings": {
     "VehicleCollection": "Vehicle",
-    "TrackerCollection" :  "Tracker",
+    "TrackerCollection": "Tracker",
     "ConnectionString": "mongodb+srv://admin:admin@cluster0.kdozv.mongodb.net/admin",
     "DatabaseName": "VehicleTrackingSystem"
   },
@@ -12,5 +12,6 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "MapsApiKey": "AIzaSyDUl4bmCfTHIEG5ML6V0eKzCGF0_C6TBmg"
 }
